<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/black"
    tools:context=".ui.UserDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/detail_avatar"
        android:text="@string/name"
        android:textSize="25dp"
        android:textColor="@color/white"/>

        <TextView
            android:id="@+id/detail_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@id/detail_followers"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/detail_followers"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/post"
            android:textAlignment="center"
            android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_followers"
        android:layout_below="@id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/followers"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/detail_following"
        android:layout_alignBaseline="@id/detail_followers"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_followers"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAlignment="center"
        android:text="@string/following"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_location"
        android:textColor="@color/white"
        android:layout_below="@id/detail_followers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/detail_location"
            android:layout_marginTop="40dp"
            android:background="@color/grey"
            android:theme="@style/Theme.MaterialComponents"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs"/>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>


